--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 navbar: orange
 ---
 
-<div class="jumbotron jumbotron-header">
+<div class="jumbotron jumbotron-header jumbotron-header-orange">
   <div class="container">
     <div class="col-lg-12">
       <h1 class="jumbo-title text-center">Posts</h1>
@@ -26,5 +26,5 @@ navbar: orange
     </div>
     <div class="col-lg-2"></div>
   </div>
-  
+
 </div>
