--- a/index.html
+++ b/index.html
@@ -6,8 +6,30 @@ navbar: orange
 <div class="jumbotron jumbotron-header jumbotron-header-orange">
   <div class="container">
     <div class="col-lg-12">
-      <h1 class="jumbo-title text-center">Oh Where do I Even Start?</h1>
+      <h1 class="jumbo-title text-center">Software Engineer & Angel Investor</h1>
     </div>
+  </div>
+</div>
+
+<div id="social-media-links" class="container">
+   <div class="row">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8">
+      <ul class="social-list">
+        {% assign sm = site.data.social-media %}
+        {% for entry in sm %}
+          {% assign key = entry | first %}
+          <li class="social-list-item">
+            <a href="{{ sm[key].href }}/{{ sm[key].id }}" title="{{ sm[key].title }}">
+              <button class="btn btn-{{ sm[key].color }} btn-rounded">
+                <i class="fa-brands {{ sm[key].fa-icon }}"></i> {{ sm[key].title }}
+              </button>
+            </a>
+          <li/>
+        {% endfor %}
+      </ul>
+    </div>
+    <div class="col-lg-2"></div>
   </div>
 </div>
 
