Blog and social updates

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ navbar: orange
   <div class="row py-lg-5">
     <div class="col-lg-6 col-md-8 mx-auto">
       <h1 class="fw-light">Find Me on the Internets</h1>
-      <p class="lead text-muted">I love exploring new tech and platforms. You can find me all over the net on some of the sites below.</p>
+      <p class="lead text-muted">I love exploring new tech and platforms. You can find me all over the net. Just check out the links below.</p>
     </div>
   </div>
 </section>
